--- a/examples/4-survey/index.html
+++ b/examples/4-survey/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Survey</title>
+    <title>Sondage</title>
     <!-- font awesome -->
     <link
       rel="stylesheet"
@@ -27,9 +27,9 @@
     <!-- content -->
     <section class="section section-center content">
       <div class="title">
-        <h2>Survey</h2>
+        <h2>Vos préférences</h2>
         <div class="title-underline"></div>
-        <h4>Most important room in the house?</h4>
+        <h4>Quel est votre tableau favori ?</h4>
       </div>
       <ul class="result"></ul>
     </section>
